<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dialog_layout_outside"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/dialog_bg"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:gravity="center"
            android:text="@string/dialog_chosen_title"
            android:textColor="@color/black"
            android:textSize="15dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginTop="8dp"
            android:background="@color/divide_color" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dialog_height"
            android:layout_marginLeft="28dp"
            android:layout_marginRight="28dp"
            android:orientation="horizontal" >

            <LinearLayout
                android:id="@+id/wx_layout"
                android:layout_width="0dp"
                android:layout_height="@dimen/dialog_height"
                android:layout_weight="1"
                android:orientation="horizontal" >

                <ImageView
                    android:id="@+id/wx_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:background="@drawable/wechat" />

                <TextView
                    android:id="@+id/wx_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="28dp"
                    android:gravity="center"
                    android:singleLine="true"
                    android:text="@string/wxscan"
                    android:textColor="@color/black"
                    android:textSize="15dp" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="2dp"
                    android:layout_weight="1" />
            </LinearLayout>

            <ImageView
                android:id="@+id/wx_download"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="@drawable/btn_download_selector"
                android:clickable="true"
                android:focusable="false" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/divide_color" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dialog_height"
            android:layout_marginLeft="28dp"
            android:layout_marginRight="28dp"
            android:orientation="horizontal" >

            <LinearLayout
                android:id="@+id/alipay_layout"
                android:layout_width="0dp"
                android:layout_height="@dimen/dialog_height"
                android:layout_weight="1"
                android:orientation="horizontal" >

                <ImageView
                    android:id="@+id/alipay_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:background="@drawable/alipay" />

                <TextView
                    android:id="@+id/alipay_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="28dp"
                    android:gravity="center"
                    android:singleLine="true"
                    android:text="@string/alipayscan"
                    android:textColor="@color/black"
                    android:textSize="15dp" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="2dp"
                    android:layout_weight="1" />
            </LinearLayout>

            <ImageView
                android:id="@+id/alipay_download"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="@drawable/btn_download_selector"
                android:clickable="true"
                android:focusable="false" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/divide_color" />
    </LinearLayout>

</RelativeLayout>